examples/syntax_error/deeper.js
load('./corrupted.js').then(function (v) {
    return 'this is ' + v;
})
